🚀 Update Dockerfile to use complete MCP server (200+ tools)
- Changed COPY from basic mcp_server.py to open_webui_mcp_complete.py
- Now uses the full 200+ tool implementation instead of basic 12 tools
- Ready for production deployment with complete API coverage

Part of InstaBids AI Hub DigitalOcean migration plan.

--- a/mcp-server/Dockerfile
+++ b/mcp-server/Dockerfile
@@ -20,8 +20,8 @@ RUN pip install --no-cache-dir \
 COPY requirements.txt* ./
 RUN if [ -f requirements.txt ]; then pip install --no-cache-dir -r requirements.txt; fi
 
-# Copy the MCP server files
-COPY mcp_server.py .
+# Copy the COMPLETE MCP server files (200+ tools)
+COPY open_webui_mcp_complete.py mcp_server.py
 COPY auth_handler.py .
 
 # Create a healthcheck script
