🔧 Fix Dockerfile paths for repo root build context

--- a/mcp-server/Dockerfile
+++ b/mcp-server/Dockerfile
@@ -13,16 +13,15 @@ RUN pip install --no-cache-dir \
     mcp \
     aiohttp \
     redis \
-    python-jose[cryptography] \
-    asyncio
+    python-jose[cryptography]
 
-# Copy requirements if we have more dependencies
-COPY requirements.txt* ./
+# Copy requirements from correct path (build context is repo root)
+COPY mcp-server/requirements.txt* ./
 RUN if [ -f requirements.txt ]; then pip install --no-cache-dir -r requirements.txt; fi
 
-# Copy the COMPLETE MCP server files (200+ tools)
-COPY open_webui_mcp_complete.py mcp_server.py
-COPY auth_handler.py .
+# Copy the COMPLETE MCP server files (200+ tools) from correct paths
+COPY mcp-server/open_webui_mcp_complete.py mcp_server.py
+COPY mcp-server/auth_handler.py .
 
 # Create a healthcheck script
 RUN echo '#!/bin/sh\ncurl -f http://localhost:8888/health || exit 1' > /healthcheck.sh && \
