🔧 FIX: Use direct HTTP server instead of MCPO proxy
- Removed MCPO proxy layer that was causing outdated responses
- Now runs our new HTTP server directly for proper Redis SSL connection
- Simplified deployment to use standalone server with built-in endpoints

--- a/mcp-server/Dockerfile
+++ b/mcp-server/Dockerfile
@@ -10,14 +10,6 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies
-RUN pip install --no-cache-dir \
-    mcpo \
-    mcp \
-    aiohttp \
-    redis \
-    python-jose[cryptography]
-
 # Copy requirements from correct path (build context is repo root)
 COPY mcp-server/requirements.txt* ./
 RUN if [ -f requirements.txt ]; then pip install --no-cache-dir -r requirements.txt; fi
@@ -29,6 +21,6 @@ COPY mcp-server/auth_handler.py .
 # Expose the MCP server port
 EXPOSE 8888
 
-# FIXED: Remove health check and use correct mcpo syntax
-# mcpo will proxy the MCP server and provide the HTTP endpoints
-CMD ["mcpo", "--host", "0.0.0.0", "--port", "8888", "--", "python", "mcp_server.py"]
+# RUN DIRECT HTTP SERVER (not MCPO proxy)
+# Our new code is a standalone HTTP server with health check and MCP endpoints
+CMD ["python", "mcp_server.py"]
