feat: Switch to revolutionary 200+ tool MCP implementation

--- a/mcp-server/Dockerfile
+++ b/mcp-server/Dockerfile
@@ -2,25 +2,20 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Cache invalidation comment - REBUILD: 2025-06-26-18:50 PST - Force fresh build for import fix
-# This comment forces Docker to rebuild all subsequent layers and bypass cache
-
-# Install system dependencies
+# Install system dependencies for FastAPI
 RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements from correct path (build context is repo root)
+# Copy requirements and install dependencies
 COPY mcp-server/requirements.txt* ./
-RUN if [ -f requirements.txt ]; then pip install --no-cache-dir -r requirements.txt; fi
+RUN pip install --no-cache-dir fastapi uvicorn httpx
 
-# Copy the COMPLETE MCP server files (200+ tools) from correct paths
-COPY mcp-server/open_webui_mcp_complete.py mcp_server.py
-COPY mcp-server/auth_handler.py .
+# Copy the REVOLUTIONARY COMPLETE MCP server (200+ tools)
+COPY mcp-server/revolutionary_complete.py mcp_server.py
 
 # Expose the MCP server port
 EXPOSE 8888
 
-# RUN DIRECT HTTP SERVER (not MCPO proxy)
-# Our new code is a standalone HTTP server with health check and MCP endpoints
+# Run the FastAPI server with uvicorn
 CMD ["python", "mcp_server.py"]
