--- a/mcp-server/requirements.txt
+++ b/mcp-server/requirements.txt
@@ -1,6 +1,6 @@
-# MCP Server Requirements
-mcpo>=0.0.15
-mcp>=1.0.0
-aiohttp>=3.9.0
-redis[hiredis]>=5.0.0
-python-jose[cryptography]>=3.3.0
+fastapi==0.104.1
+uvicorn==0.24.0
+httpx==0.25.1
+aiofiles==23.2.1
+python-dotenv==1.0.0
+pydantic==2.5.0
