--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,13 +6,9 @@ http {
     # File upload size limit
     client_max_body_size 100M;
     
-    # Enable gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 10240;
-    gzip_proxied expired no-cache no-store private auth;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
-    gzip_disable "MSIE [1-6]\.";
+    # MIME types
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
     
     # Upstream definitions
     upstream open-webui {
@@ -26,24 +22,12 @@ http {
     upstream filebrowser {
         server filebrowser:80;
     }
-    
-    upstream code-server {
-        server code-server:8443;
-    }
 
     server {
         listen 80;
-        server_name aihub.instabids.ai 159.65.36.162;
+        server_name _;
         
-        # Redirect to HTTPS if certificate exists
-        # return 301 https://$server_name$request_uri;
-        
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        
-        # Main Open WebUI interface
+        # Main Open WebUI
         location / {
             proxy_pass http://open-webui;
             proxy_set_header Host $host;
@@ -51,7 +35,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             
-            # WebSocket support for real-time features
+            # WebSocket support
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
@@ -67,10 +51,9 @@ http {
             proxy_pass http://mcp-server/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
         
-        # SSE endpoint for MCP (Server-Sent Events)
+        # SSE endpoint for MCP
         location /sse {
             proxy_pass http://mcp-server/sse;
             proxy_set_header Host $host;
@@ -80,49 +63,14 @@ http {
             chunked_transfer_encoding off;
             proxy_buffering off;
             proxy_cache off;
-            proxy_read_timeout 86400s;
-            
-            # SSE specific headers
-            add_header Content-Type text/event-stream;
-            add_header Cache-Control no-cache;
-            add_header X-Accel-Buffering no;
         }
         
         # FileBrowser for visual file management
-        location /files {
-            return 302 /files/;
-        }
-        
         location /files/ {
             proxy_pass http://filebrowser/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # WebSocket support
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-        
-        # VS Code Server (optional)
-        location /code {
-            return 302 /code/;
-        }
-        
-        location /code/ {
-            proxy_pass http://code-server/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Accept-Encoding gzip;
-            
-            # WebSocket support
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
         }
         
         # Direct workspace access (read-only)
@@ -131,18 +79,6 @@ http {
             autoindex on;
             autoindex_exact_size off;
             autoindex_localtime on;
-            autoindex_format html;
-            charset utf-8;
-            
-            # Add icons for file types
-            add_before_body /autoindex/header.html;
-            add_after_body /autoindex/footer.html;
-        }
-        
-        # API documentation (if Swagger enabled)
-        location /docs {
-            proxy_pass http://open-webui/docs;
-            proxy_set_header Host $host;
         }
         
         # Health check endpoint
@@ -152,20 +88,4 @@ http {
             add_header Content-Type text/plain;
         }
     }
-    
-    # HTTPS server (uncomment after SSL setup)
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name aihub.instabids.ai;
-    #     
-    #     ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-    #     
-    #     # SSL configuration
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers HIGH:!aNULL:!MD5;
-    #     ssl_prefer_server_ciphers on;
-    #     
-    #     # Copy all location blocks from above
-    # }
 }
